--- a/week-one/placing-elements.css
+++ b/week-one/placing-elements.css
@@ -1,11 +1,13 @@
 * {
     box-sizing: border-box;
+    background-color: whitesmoke;
 }
 
 header {
     background-color: white;
     height: 40px;
     width: 100vw%;
+    display: block;
 }
 
 #logo img {
@@ -13,6 +15,8 @@ header {
     width: 200px;
     padding: 4px;
     float: left;
+    display: inline-block;
+    background-color: white;
 }
 
 #menu img {
@@ -20,10 +24,26 @@ header {
     width: 40px;
     padding: 4px;
     float: right;
+    display: inline-block;
+    background-color: white;
 }
 
-#mainimage img {
-    height: 40vw;
+.mainimage img {
+    height: 45vw;
     width: 100%;
-    position: relative;
+    z-index: 1;
+    display: inline-block;
+    position: absolute;
+}
+
+.mainimage .title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: inline-block;
+    color: tomato;
+    z-index: 10;
 }
