--- a/week-two/webiste-with-hamburger/website.css
+++ b/week-two/webiste-with-hamburger/website.css
@@ -68,65 +68,25 @@ button {
 
 section {
     position: relative;
+    background-color: lightgrey;
+    padding: 3% 12% 2% 12%;
     width: 100%;
-    height: 300px;
+    height: fit-content;
+    min-height: fit-content;
 }
 
-.firstbox {
-    width: 50%;
-    height: 100%;
-    position: absolute;
-    padding: 20px 0px 10px 150px;
-    background-color: lightgrey;
+.copyboxes {
+    position: relative;
+    height: fit-content;
 }
 
-.secondbox {
-    width: 50%;
-    height: 100%;
-    position: absolute;
-    background-color: lightgrey;
-    right: 0;
-    padding: 20px 0px 10px 0px;
-}
+/* .four-section {
+    border: 1px black solid;
+} */
 
 .icon {
-    width: 50px;
+    width: 10%;
     position: absolute;
-}
-
-#cat {
-    left: 90px;
-}
-
-#swim {
-    left: 90px;
-    margin-top: 20px;
-}
-
-#swimcopy {
-    margin-top: 20px;
-}
-
-#world-world {
-    position: relative;
-}
-
-#worldcopy {
-    /* position: absolute; */
-    margin-left: 60px;
-}
-
-#columns-columns {
-    position: relative;
-}
-#columns {
-    /* position: absolute; */
-    margin-top: 20px;
-}
-
-#columnscopy {
-    /* position: relative; */
-    margin: 20px 0px 0px 60px;
 }
 
 h4 {
@@ -137,14 +97,52 @@ h4 {
 
 p {
     font-size: 16px;
+    min-height: 3em;
+}
+
+#top-left {
+    position: relative;
+    width: 50%;
+    padding-right: 2%;
+}
+
+#top-right {
+    position: absolute;
+    width: 50%;
+    top: 0%;
+    right: 0%;
+    padding-right: 2%;
+}
+
+#bottom-left {
+    position: relative;
+    width: 50%;
+    padding-right: 2%;
+}
+
+#bottom-right {
+    position: absolute;
+    width: 50%;
+    top: 0%;
+    right: 0%;
+    padding-right: 2%;
+}
+
+.copy {
+    margin-left: 12%;
+}
+
+/* @media screen and (max-width: 800px) {
+    main img {
+    }
 }
 
 @media screen and (max-width: 400px) {
-    /* main img {
+    main img {
         width: 400px;
         height: auto;
-    } */
-}
+    }
+} */
 
 @media (prefers-color-scheme: dark) {
     body {
@@ -174,10 +172,10 @@ p {
     top: 0;
     right: 0;
     bottom: 0;
-    transform: translateX(100%);
+    /* transform: translateX(100%); */
     background-color: rgba(0, 0, 0, 0.712);
-    /* visibility: hidden; */
-    left: 0%;
+    visibility: hidden;
+    left: 0;
     transition: 1.5s;
 }
 
@@ -185,10 +183,11 @@ p {
     height: 100%;
     width: 20%;
     background-color: white;
-    float: right;
+    /* float: right; */
     position: absolute;
-    left: 100%;
-    transform: translateX(-100%);
+    right: 0;
+    transform: translateX(100%);
+    transition: 1.5s;
 }
 
 #close {
@@ -198,7 +197,7 @@ p {
     padding-right: 8px;
 }
 
-p {
+.side-nav p {
     font-size: 20px;
     margin: 2% 0 0 10%;
     padding: 3px;
