--- a/week-two/webiste-with-hamburger/website.css
+++ b/week-two/webiste-with-hamburger/website.css
@@ -95,7 +95,7 @@ h4 {
     color: black;
 }
 
-p {
+.copy p {
     font-size: 16px;
     min-height: 3em;
 }
@@ -190,11 +190,20 @@ p {
     transition: 1.5s;
 }
 
+#close-button {
+    float: right;
+}
+
 #close {
-    text-align: right;
     font-size: 25px;
     color: dimgrey;
     padding-right: 8px;
+    min-height: 1em;
+    width: 1em;
+}
+
+#menu-items {
+    margin-top: 40%;
 }
 
 .side-nav p {
