carousel files update - clickable buttons incomplete

--- a/week-two/carousel/carousel.css
+++ b/week-two/carousel/carousel.css
@@ -27,7 +27,29 @@ body {
     transition: transform 3s;
 }
 
-.conatiner img.offscreen-left {
+.container img.offscreen-left {
     transform: translateX(-100%);
     transition: transform 3s;
+}
+
+#dots {
+    position: absolute;
+    bottom: 30px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.dot {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 3px white solid;
+    margin: 0 4px 0;
+    /* position: relative; */
+}
+
+.on {
+    background-color: white;
+    transition: 3s;
 }
