--- a/week-two/webiste-with-hamburger/website.css
+++ b/week-two/webiste-with-hamburger/website.css
@@ -27,43 +27,48 @@ header {
     float: right;
 }
 
-#mainimage {
+.background {
     position: relative;
 }
 
-main div img {
+main img {
     width: 100%;
     height: auto;
-    position: relative;
     vertical-align: bottom;
+    /* background-size: contain;
+    background-repeat: no-repeat; */
+}
+
+.image-content {
+    position: absolute;
+    z-index: 1;
+    top: 47%;
+    left: 50%;
+    transform: translateX(-50%);
+    /* transform: translateY(-50%); */
+    text-align: center;
 }
 
 h3 {
     font-family: Geneva;
-    font-size: 32px;
-    top: 47%;
-    left: 50%;
-    transform: translateX(-50%);
+    font-size: 2.5vw;
     background-color: transparent;
     color: white;
     font-style: italic;
-    position: absolute;
+    position: relative;
 }
 
-button {
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translateX(-50%);
+#button {
+    position: relative;
     background-color: yellow;
     border: 4px solid orange;
     border-radius: 50px;
     color: orange;
-    font-size: 16px;
+    font-size: 1.8vw;
     font-style: bold;
-    box-sizing: content-box;
     padding: 4px 24px;
-    height: auto;
+    /* min-height: 30px;
+    min-width: 148 */
 }
 
 section {
@@ -75,14 +80,14 @@ section {
     min-height: fit-content;
 }
 
+#secondbox {
+    margin-top: 1em;
+}
+
 .copyboxes {
     position: relative;
     height: fit-content;
 }
-
-/* .four-section {
-    border: 1px black solid;
-} */
 
 .icon {
     width: 10%;
@@ -90,13 +95,13 @@ section {
 }
 
 h4 {
-    font-size: 27px;
+    font-size: 2.5vw;
     font-style: bold;
     color: black;
 }
 
 .copy p {
-    font-size: 16px;
+    font-size: 1.1rem;
     min-height: 3em;
 }
 
@@ -132,58 +137,22 @@ h4 {
     margin-left: 12%;
 }
 
-/* @media screen and (max-width: 800px) {
-    main img {
-    }
-}
-
-@media screen and (max-width: 400px) {
-    main img {
-        width: 400px;
-        height: auto;
-    }
-} */
-
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: grey;
-        color: antiquewhite;
-    }
-    header {
-        background-color: grey;
-        color: antiquewhite;
-    }
-    #menu img {
-        background-color: grey;
-    }
-    .firstbox {
-        background-color: grey;
-    }
-    .secondbox {
-        background-color: grey;
-    }
-    p {
-        color: white;
-    }
-}
-
 .overlay {
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
-    /* transform: translateX(100%); */
     background-color: rgba(0, 0, 0, 0.712);
     visibility: hidden;
     left: 0;
     transition: 1.5s;
+    z-index: 2;
 }
 
 .side-nav {
     height: 100%;
     width: 20%;
     background-color: white;
-    /* float: right; */
     position: absolute;
     right: 0;
     transform: translateX(100%);
@@ -223,4 +192,135 @@ h4 {
     transition-duration: 1.5s;
     transform: translateX(0%);
     visibility: visible;
+}
+
+@media screen and (max-width: 800px) {
+    header {
+        height: 40px;
+        width: 100%;
+    }
+
+    #logo img {
+        height: 30px;
+        width: auto;
+        padding-top: 2px;
+    }
+
+    #menu img {
+        height: 40px;
+        width: auto;
+        padding: 3px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+
+    #button {
+        font-size: 14px;
+    }
+
+    #top-right,
+    #bottom-right {
+        position: relative;
+    }
+
+    #top-right,
+    #bottom-right,
+    #top-left,
+    #bottom-left {
+        width: 100%;
+    }
+
+    .icon {
+        width: 8%;
+    }
+
+    h4 {
+        font-size: 22px;
+    }
+
+    .copy p {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    header {
+        height: 30px;
+        width: 100%;
+    }
+
+    #logo img {
+        height: 25px;
+        width: auto;
+        padding-top: 2px;
+    }
+
+    #menu img {
+        height: 30px;
+        width: auto;
+        padding: 2px;
+    }
+
+    main img {
+        width: 400px;
+        height: auto;
+    }
+
+    h3 {
+        font-size: 13px;
+    }
+
+    #button {
+        font-size: 12px;
+    }
+
+    h3 {
+        max-height: 54px;
+    }
+
+    h4 {
+        font-size: 20px;
+    }
+
+    .copy p {
+        font-size: 14px;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    header {
+        background-color: rgba(0, 0, 0, 0.712);
+    }
+
+    #button {
+        background-color: rgba(0, 0, 0, 0.712);
+        border: 4px solid black;
+        color: white;
+    }
+
+    section {
+        background-color: rgba(0, 0, 0, 0.712);
+    }
+    h4 {
+        color: antiquewhite;
+    }
+    p {
+        color: white;
+    }
+    .overlay {
+        background-color: rgba(0, 0, 0, 0.512);
+    }
+
+    .side-nav {
+        background-color: rgba(0, 0, 0, 0.812);
+    }
+
+    #close {
+        color: white;
+    }
+    .side-nav p a {
+        color: white;
+    }
 }
