--- a/week-three/j-query/ticker-refactored/ticker-refactored.css
+++ b/week-three/j-query/ticker-refactored/ticker-refactored.css
@@ -18,3 +18,8 @@ body {
     border-bottom: 2px dimgrey solid;
     height: 1.5em;
 }
+
+.hover {
+    color: blue;
+    text-decoration: underline;
+}
