--- a/week-three/connect-four/styles.css
+++ b/week-three/connect-four/styles.css
@@ -4,30 +4,80 @@
 }
 body {
     background-color: lightgray;
+    /* border: 2px black solid; */
+    height: 100vh;
+}
+
+.board-container {
+    position: absolute;
+    left: 3%;
+    top: 5%;
+    /* border: 2px black solid; */
 }
 
 #board {
     display: flex;
+    border: 2px rgba(0, 0, 0, 0.392) solid;
+}
+
+/* @keyframes mymove {
+    from {
+        background-color: lightgrey;
+    }
+    to {
+        background-color: tomato;
+    }
 }
 
 .player1 {
-    background-color: red;
+    background-color: lightgrey;
+    animation-name: mymove;
+    animation-duration: 1s;
+}
+
+@keyframes mymove {
+    from {
+        background-color: lightgrey;
+    }
+    to {
+        background-color: tomato;
+    }
+} */
+
+.player1 {
+    background-color: tomato;
 }
 .player2 {
-    background-color: yellow;
+    background-color: lightgoldenrodyellow;
 }
 
 .slot {
     /* background-color: blue; */
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
     overflow: hidden;
 }
 .hole {
     /* background-color: antiquewhite; */
-    height: 80px;
-    width: 80px;
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
     transform: translate(-30px, -30px);
-    border: 40px solid blue;
+    border: 38px solid lightslategray;
+}
+
+.buttons {
+    position: relative;
+    /* border: 1px black solid; */
+    padding-top: 2%;
+}
+
+.clear {
+    /* padding: 2px 10px; */
+    /* height: 4vh;
+    width: 6vw; */
+    /* bottom: 0%; */
+    color: darkred;
+    font-size: 16px;
+    /* border: 2px black solid; */
 }
