--- a/week-three/connect-four/styles.css
+++ b/week-three/connect-four/styles.css
@@ -2,63 +2,91 @@
     /* box-sizing: border-box; */
     margin: 0;
 }
+
 body {
     background-color: lightgray;
     /* border: 2px black solid; */
     height: 100vh;
 }
 
+header {
+    position: relative;
+    width: 558px;
+    top: 5%;
+    left: 3%;
+    font-size: 26px;
+    font: 26px "Fira Sans", sans-serif;
+    background-color: antiquewhite;
+    color: darkred;
+    padding-left: 3px;
+    border-bottom: 1px darkred solid;
+}
+
 .board-container {
     position: absolute;
     left: 3%;
-    top: 5%;
+    top: 10%;
     /* border: 2px black solid; */
 }
 
-#board {
+.board {
     display: flex;
-    border: 2px rgba(0, 0, 0, 0.392) solid;
+    /* border: 2px rgba(0, 0, 0, 0.392) solid; */
+    /* transition: 1.5s; */
 }
 
-/* @keyframes mymove {
+.overlay-on {
+    position: fixed;
+    height: 480px;
+    width: 560px;
+    left: 3%;
+    top: 10%;
+    animation-name: reset-slidein;
+    animation-duration: 2s;
+    z-index: 2;
+    visibility: hidden;
+}
+
+@keyframes reset-slidein {
     from {
-        background-color: lightgrey;
+        margin-left: -100%;
+        background-color: lightslategray;
+        opacity: 0;
+        /* visibility: hidden; */
+    }
+
+    70% {
+        margin-left: 0;
+        background-color: lightslategray;
+        opacity: 1;
+        visibility: visible;
     }
     to {
-        background-color: tomato;
+        margin-left: -100%;
+        background-color: lightslategray;
+        opacity: 0;
+        visibility: hidden;
     }
 }
 
 .player1 {
-    background-color: lightgrey;
-    animation-name: mymove;
-    animation-duration: 1s;
-}
-
-@keyframes mymove {
-    from {
-        background-color: lightgrey;
-    }
-    to {
-        background-color: tomato;
-    }
-} */
-
-.player1 {
+    transition: 1.5s;
     background-color: tomato;
 }
+
 .player2 {
-    background-color: lightgoldenrodyellow;
+    /* animation-name: slotcolor2; */
+    transition: 1.5s;
+    background-color: yellowgreen;
 }
 
 .slot {
-    /* background-color: blue; */
     height: 80px;
     width: 80px;
     overflow: hidden;
 }
+
 .hole {
-    /* background-color: antiquewhite; */
     height: 60px;
     width: 60px;
     border-radius: 50%;
@@ -66,18 +94,54 @@ body {
     border: 38px solid lightslategray;
 }
 
-.buttons {
+.footer {
     position: relative;
-    /* border: 1px black solid; */
-    padding-top: 2%;
+    margin-top: 1%;
+    /* border: 0.5px black solid; */
 }
 
 .clear {
-    /* padding: 2px 10px; */
-    /* height: 4vh;
-    width: 6vw; */
-    /* bottom: 0%; */
     color: darkred;
-    font-size: 16px;
-    /* border: 2px black solid; */
+    font: 26px "Fira Sans", sans-serif;
+    margin-right: 1%;
+    border-radius: 0%;
+    border: 0px antiquewhite solid;
+    background-color: antiquewhite;
+    border-top: 1px darkred solid;
+}
+.turn-indicator {
+    position: absolute;
+    /* border: 0.5px black solid; */
+    height: 98%;
+    width: 73.7%;
+    top: 0;
+    right: 0;
+    border-top: 1px darkred solid;
+}
+
+.player1-turn {
+    background-color: tomato;
+    transition-delay: 1.5s;
+}
+.player2-turn {
+    background-color: yellowgreen;
+    transition-delay: 1.5s;
+}
+
+.one-turn,
+.two-turn {
+    position: absolute;
+    width: 53%;
+    left: 50%;
+    bottom: 8%;
+    transform: translateX(-50%);
+    font: 26px "Fira Sans", sans-serif;
+    visibility: hidden;
+    transition-delay: 1.5s;
+    color: antiquewhite;
+}
+
+.on {
+    visibility: visible;
+    transition-delay: 1.5s;
 }
