--- a/week-four/spotify-search/styles.css
+++ b/week-four/spotify-search/styles.css
@@ -5,6 +5,14 @@
 body {
     background-color: rgb(249, 239, 223);
     margin: 0;
+    height: 100vh;
+}
+
+.wrapper {
+    position: relative;
+    background-color: rgb(249, 239, 223);
+    margin: 0;
+    height: 100vh;
 }
 
 input {
@@ -44,12 +52,12 @@ select {
     left: 3%;
     top: 11%;
     right: 3%;
-    /* height: 80%;
-    width: 40%; */
-    /* border: 1px lightsalmon dashed; */
+    /* margin-bottom: 5%; */
+    border: 1px black dashed;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .item-separator {
@@ -58,6 +66,7 @@ select {
     /* border: 2px red solid; */
     display: flex;
     flex-direction: column;
+
     /* flex-wrap: wrap; */
 }
 
@@ -92,14 +101,15 @@ img {
 }
 
 #more {
-    position: absolute;
-    bottom: 3%;
+    position: fixed;
     left: 3%;
-    height: 10%;
-    width: 94%;
+    height: 5%;
+    width: 40%;
+    bottom: 0%;
     font-size: 14px;
     /* visibility: hidden; */
     background-color: lightgray;
     border: none;
     border: 2px red solid;
+    z-index: 4;
 }
