--- a/week-five/portfolio/projects/spotify-search/styles.css
+++ b/week-five/portfolio/projects/spotify-search/styles.css
@@ -8,13 +8,6 @@ body {
     height: 100vh;
 }
 
-.wrapper {
-    position: relative;
-    background-color: rgb(249, 239, 223);
-    margin: 0;
-    height: 100vh;
-}
-
 input {
     position: absolute;
     top: 5%;
@@ -110,6 +103,6 @@ img {
     /* visibility: hidden; */
     background-color: lightgray;
     border: none;
-    border: 2px red solid;
+    /* border: 2px red solid; */
     z-index: 4;
 }
