--- a/week-five/hipster-portfolio/views/welcome.handlebars
+++ b/week-five/hipster-portfolio/views/welcome.handlebars
@@ -1,5 +1,5 @@
 
-    <h2>portfolio items</h2>
+    <h1>my portfolio</h1>
     <div class="projects">
     {{#projectList}}
             <div class="item-separator">          
