--- a/week-five/hipster-portfolio/views/layouts/main.handlebars
+++ b/week-five/hipster-portfolio/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" class="style">
+    <link rel="stylesheet" href="/styles.css" class="style">
     <title>my portfolio</title>
 </head>
 <body>
