--- a/week-five/hipster-portfolio/views/welcome.handlebars
+++ b/week-five/hipster-portfolio/views/welcome.handlebars
@@ -1,5 +1,5 @@
 
-    <h1>my portfolio</h1>
+    <h1 id="header">my portfolio</h1>
     <div class="projects">
     {{>projectList home=true}}
     </div>
