--- a/week-five/hipster-portfolio/public/styles.css
+++ b/week-five/hipster-portfolio/public/styles.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
 }
+
 body {
     background-color: #f6f6f6;
     margin: 0;
@@ -14,10 +15,23 @@ h1 {
     color: #383838;
 }
 
+.sticky {
+    position: fixed;
+    /* top: 0; */
+    width: 100%;
+    z-index: 10;
+    padding-bottom: 10px;
+    /* border-bottom: 2px solid #30475e;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.8); */
+}
+
+.sticky + #results-container {
+    padding-top: 190px;
+}
+
 .projects {
     margin-top: 4%;
     margin-left: 1%;
-    /* border: 1px black dashed; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -27,8 +41,6 @@ h1 {
 
 .item-separator {
     width: 300px;
-    /* height: 300px; */
-    /* border: 1px red solid; */
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -37,57 +49,65 @@ h1 {
 .item-image {
     width: 250px;
     height: 250px;
-    /* border: 1px solid darkslategray; */
     box-shadow: 6px 6px 5px 1px rgba(158, 158, 162, 0.5);
 }
 
 .item-image:hover {
-    /* border: 2px black solid; */
     filter: hue-rotate(90deg);
 }
 
 img {
     width: 100%;
     height: 100%;
-    /* border: 2px green solid; */
 }
 
 .item-name {
-    /* font-size: 18px; */
-    /* border: 2px blue solid; */
     text-decoration: none;
     margin-top: 3%;
-    margin-bottom: 10%;
+    margin-bottom: 12%;
+    padding-left: 1%;
     font-size: larger;
+    color: #383838;
+    border-bottom: 2px #f6f6f6 solid;
 }
+
 .item-name:hover {
-    /* border: 2px black solid; */
-    color: blue;
-    text-decoration: underline;
+    color: white;
+    background-color: mediumseagreen;
+    border-bottom: 2px #383838 solid;
+    opacity: 0.6;
 }
 
 footer {
-    /* align-self: flex-end; */
     float: right;
     margin: 2% 5% 1% 0;
-    /* border: 2px blue solid; */
     color: lightslategray;
 }
+
 /* /////////////////////Desc Page Styling*/
 
+#desc-header {
+    margin: 1% 10% 0 10%;
+    border-bottom: 1px #383838 solid;
+    color: #383838;
+}
+
 .desc-container {
-    /* border: 1px blue solid; */
-    /* width: 100%; */
+    /* border-bottom: 1px #383838 solid; */
+    width: 75%;
     display: flex;
     flex-direction: row;
-    margin: 0% 5%;
+    justify-content: space-between;
+    /* margin: 0% 10%; */
+    margin: 0% 13%;
+    /* justify-self: center; */
 }
 
 /* ////////////////////NAV BAR STYLING */
 
 .nav {
-    border-right: 1px darkslategray solid;
-    padding-top: 2%;
+    padding-top: 5%;
+    border-right: 1px #383838 solid;
     width: 25%;
     display: flex;
     flex-direction: column;
@@ -95,6 +115,7 @@ footer {
     text-align: right;
     font-size: larger;
 }
+
 #desc-nav {
     margin-right: 2%;
     margin-bottom: 10%;
@@ -107,18 +128,35 @@ footer {
     text-decoration: none;
     margin-right: 6%;
     width: 100%;
+    margin-top: 5%;
 }
 .nav-item {
     text-decoration: none;
     margin: 2%;
     /* border: 1px solid darkslategray; */
     color: #383838;
+    padding: 1% 1% 0 2%;
+}
+
+.nav-item:hover {
+    /* border: 2px black solid; */
+    color: white;
+    background-color: mediumseagreen;
+    opacity: 0.6;
+
+    border-bottom: 2px #383838 solid;
 }
 
 #back {
     margin-right: 2%;
-    margin-top: 10%;
+    margin-top: 22%;
     font-size: x-large;
+}
+
+#back > a:hover {
+    /* border: 2px black solid; */
+    color: darkred;
+    /* text-decoration: underline; */
 }
 
 #back > a {
@@ -129,45 +167,47 @@ footer {
 /* //////////////// DESC COMPONENT */
 
 .desc-item-separator {
-    /* width: 300px; */
-    /* height: 300px; */
-    border: 1px red solid;
-    padding-top: 2%;
+    /* border: 1px red solid; */
+    padding-top: 6%;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-self: right;
-    margin-left: 15%;
-    width: 65%;
+    justify-content: space-between;
+    margin-left: 14%;
+    width: 100%;
 }
 
 .desc-item-image {
-    width: 450px;
-    height: 450px;
-    border: 1px solid purple;
+    width: 500px;
+    height: 500px;
+    /* border: 1px solid purple; */
     box-shadow: 6px 6px 5px 1px rgba(158, 158, 162, 0.5);
+    /* justify-self: right; */
 }
 
 .desc-item-name {
-    border: 1px solid blue;
-    text-align: right;
-    padding: 2%;
+    /* border: 1px solid purple; */
+    text-align: justify;
+    padding: 1%;
     margin: 0;
     font-size: large;
+    width: 550px;
+    margin-left: 14%;
+    color: #383838;
 }
-.button {
-    /* border: 4px solid PINK; */
-    width: 100%;
-    height: 20%;
-    margin: 0;
 
-    /* padding: 1%; */
-}
-button {
-    width: 100%;
-    height: 100%;
-    font-size: x-large;
-    border: none;
+#button > a {
+    text-decoration: none;
     color: white;
-    background-color: darkgreen;
+    font-size: 50px;
+}
+#button {
+    margin-left: 1%;
+    padding-top: 2%;
+    width: 8%;
+    height: 500px;
+    background-color: mediumseagreen;
+    opacity: 0.7;
+    text-align: center;
+    align-items: center;
+    /* border: 1px black solid; */
+    box-shadow: 6px 6px 5px 1px rgba(158, 158, 162, 0.5);
 }
