--- a/week-five/hipster-portfolio/projects/spotify-search/styles.css
+++ b/week-five/hipster-portfolio/projects/spotify-search/styles.css
@@ -3,54 +3,79 @@
 }
 
 body {
-    background-color: rgb(249, 239, 223);
+    background-color: gainsboro;
     margin: 0;
     height: 100vh;
+}
+
+span {
+    position: absolute;
+    top: 2%;
+    left: 3%;
+    height: 4%;
+    z-index: 2;
+    font-size: 50px;
+    padding: 0;
+    margin: 0;
 }
 
 input {
     position: absolute;
     top: 5%;
-    left: 3%;
-    height: 5%;
-    width: 20%;
+    left: 7%;
+    height: 4%;
+    width: 16%;
+    /* background-color: rgba(0, 0, 0, 0.2); */
+    border-radius: 5px;
+    color: #383838;
+    font-family: "roboto", sans-serif;
+    font-size: large;
+    border: 1px #383838 solid;
 }
 
 select {
     position: absolute;
     top: 5%;
     left: 24%;
-    height: 5%;
-    width: 8%;
-    font-size: 14px;
-    background-color: lightgray;
-    border: none;
+    height: 4%;
+    width: 6%;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
+    color: whitesmoke;
+    text-align: center;
+    font-family: "roboto", sans-serif;
+    font-size: large;
+    padding-left: 10px;
+    border: 1px #383838 solid;
 }
 
 #submit-button {
     position: absolute;
     top: 5%;
-    left: 33%;
-    height: 5%;
-    width: 8%;
-    font-size: 14px;
-    background-color: lightgray;
-    border: none;
-    text-align: left;
+    left: 31%;
+    height: 4%;
+    width: 6%;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
+    color: whitesmoke;
+    text-align: center;
+    font-family: "roboto", sans-serif;
+    font-size: large;
 }
 
 #results-container {
-    margin-top: 3%;
+    margin-top: 5%;
     position: absolute;
-    left: 3%;
+    left: 7%;
     top: 11%;
     right: 3%;
     /* margin-bottom: 5%; */
-    border: 1px black dashed;
+    /* border: 1px black dashed; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     overflow: hidden;
+    font-family: "roboto", sans-serif;
 }
 
 .item-separator {
@@ -59,13 +84,20 @@ select {
     /* border: 2px red solid; */
     display: flex;
     flex-direction: column;
-
-    /* flex-wrap: wrap; */
+    margin-bottom: 2%;
 }
 
 .item-image {
     width: 250px;
     height: 250px;
+    box-shadow: 6px 6px 5px 1px rgba(158, 158, 162, 0.5);
+    /* border: 1px #383838 solid; */
+    margin: 0;
+    border-radius: 5px;
+}
+
+img:hover {
+    filter: grayscale(100%);
 }
 
 img {
@@ -73,36 +105,56 @@ img {
     height: 100%;
 }
 
-.item-name {
+.item-name > a {
     font-size: 18px;
+    color: #383838;
+    text-decoration: none;
+    font-family: "roboto", sans-serif;
+    padding: 0;
+    /* border: 1px black solid; */
+}
+
+p {
+    margin-top: 2%;
+    padding: 0;
+}
+
+.item-name > a:hover {
+    background-color: #383838;
+    color: whitesmoke;
+    opacity: 0.6;
+    padding: 2px;
 }
 
 #results-text {
     position: absolute;
-    color: darkred;
-    left: 3%;
+    color: #383838;
+    left: 7%;
     top: 13%;
     font-size: 20px;
+    font-family: "roboto", sans-serif;
 }
 
 #no-results {
     position: absolute;
-    color: darkgrey;
-    left: 3%;
+    color: #383838;
+    left: 7%;
     top: 10%;
     font-size: 20px;
+    font-family: "roboto", sans-serif;
 }
 
 #more {
     position: fixed;
-    left: 3%;
+    left: 7%;
     height: 5%;
     width: 40%;
     bottom: 0%;
-    font-size: 14px;
+    font-size: large;
     /* visibility: hidden; */
     background-color: lightgray;
     border: none;
     /* border: 2px red solid; */
     z-index: 4;
+    font-family: "roboto", sans-serif;
 }
