--- a/week-five/hipster-portfolio/public/styles.css
+++ b/week-five/hipster-portfolio/public/styles.css
@@ -15,20 +15,6 @@ h1 {
     color: #383838;
 }
 
-.sticky {
-    position: fixed;
-    /* top: 0; */
-    width: 100%;
-    z-index: 10;
-    padding-bottom: 10px;
-    /* border-bottom: 2px solid #30475e;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.8); */
-}
-
-.sticky + #results-container {
-    padding-top: 190px;
-}
-
 .projects {
     margin-top: 4%;
     margin-left: 1%;
@@ -53,7 +39,7 @@ h1 {
 }
 
 .item-image:hover {
-    filter: hue-rotate(90deg);
+    filter: grayscale(100%);
 }
 
 img {
@@ -68,13 +54,13 @@ img {
     padding-left: 1%;
     font-size: larger;
     color: #383838;
-    border-bottom: 2px #f6f6f6 solid;
+    border-right: 2px #f6f6f6 solid;
 }
 
 .item-name:hover {
     color: white;
     background-color: mediumseagreen;
-    border-bottom: 2px #383838 solid;
+    /* border-left: 2px #383838 solid; */
     opacity: 0.6;
 }
 
@@ -144,7 +130,7 @@ footer {
     background-color: mediumseagreen;
     opacity: 0.6;
 
-    border-bottom: 2px #383838 solid;
+    /* border-bottom: 2px #383838 solid; */
 }
 
 #back {
@@ -178,36 +164,48 @@ footer {
 .desc-item-image {
     width: 500px;
     height: 500px;
-    /* border: 1px solid purple; */
     box-shadow: 6px 6px 5px 1px rgba(158, 158, 162, 0.5);
-    /* justify-self: right; */
 }
 
-.desc-item-name {
-    /* border: 1px solid purple; */
+.description {
+    /* border-left: 1px solid purple; */
     text-align: justify;
-    padding: 1%;
+    padding: 1% 0%;
     margin: 0;
+    margin-top: 1%;
     font-size: large;
     width: 550px;
     margin-left: 14%;
     color: #383838;
+    /* background-color: wheat; */
+    /* box-shadow: 6px 6px 5px 1px rgba(158, 158, 162, 0.5); */
+    opacity: 0.7;
+    min-height: 40px;
 }
 
-#button > a {
-    text-decoration: none;
-    color: white;
-    font-size: 50px;
-}
 #button {
     margin-left: 1%;
     padding-top: 2%;
     width: 8%;
     height: 500px;
-    background-color: mediumseagreen;
-    opacity: 0.7;
-    text-align: center;
-    align-items: center;
-    /* border: 1px black solid; */
+    /* border: 1px rgba(158, 158, 162, 0.4) solid; */
     box-shadow: 6px 6px 5px 1px rgba(158, 158, 162, 0.5);
+}
+
+#button > a {
+    text-decoration: none;
+    color: #383838;
+    font-size: 45px;
+    opacity: 0.2;
+}
+
+/* #button:hover {
+    border: 1px mediumseagreen solid;
+    transition: 1s;
+} */
+
+#button > a:hover {
+    color: mediumseagreen;
+    transition: 1s;
+    opacity: 1;
 }
