--- a/week-five/hipster-portfolio/views/desc.handlebars
+++ b/week-five/hipster-portfolio/views/desc.handlebars
@@ -6,7 +6,6 @@
             <div id="desc-nav">project description >>></div>
             <div class="nav-projects">{{>projectList}}</div>
             <div id="back"><a href="/"><<< back to portfolio</a></div>
-            {{!-- <div id="back"><a href="/"><<< go to project</a></div> --}}
         </div>
         <div class="desc-project">
             {{#selectedProject}}
@@ -14,11 +13,10 @@
                     <div class="desc-item-image">
                         <img src="/{{directory}}/thumbnail.png"></a>
                     </div>
-                        {{!-- <a class="desc-item-name" href="{{directory}}">{{title}}</a> --}}
-                    <div id="button"><a href="/{{directory}}"> > </br> > </br> ></br> ></br> ></br> ></br> ></br> ><a></div>
+                    <div id="button" href="/{{directory}}"><a href="/{{directory}}"> ▷ </br> ▷ </br> ▷ </br> ▷ </br> ▷ </br> ▷ </br> ▷ <a></div>
                     </div>
                     <div class="desc-text">
-                        <p class="desc-item-name" href="{{directory}}">{{description}}</p>
+                        <p class="description" href="{{directory}}">{{description}}</p>
                     </div>
             {{/selectedProject}}    
         </div>  
