--- a/week-five/hipster-portfolio/views/desc.handlebars
+++ b/week-five/hipster-portfolio/views/desc.handlebars
@@ -3,9 +3,9 @@
     {{/selectedProject}} 
     <div class="desc-container">
         <div class="nav">
-            <div id="desc-nav">project description >>></div>
+            <div id="desc-nav">project description >></div>
             <div class="nav-projects">{{>projectList}}</div>
-            <div id="back"><a href="/"><<< back to portfolio</a></div>
+            <div id="back"><a href="/"><< back to portfolio</a></div>
         </div>
         <div class="desc-project">
             {{#selectedProject}}
