--- a/week-five/hipster-portfolio/public/styles.css
+++ b/week-five/hipster-portfolio/public/styles.css
@@ -80,11 +80,11 @@ footer {
     border-bottom: 1px #383838 solid;
     color: #383838;
     font-family: "roboto", sans-serif;
+    padding-bottom: -1px;
+    margin: 3% 5% 0% 5%;
 }
 
 .desc-container {
-    /* border: 1px #383838 solid; */
-    /* width: 75%; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
