--- a/week-five/hipster-portfolio/public/styles.css
+++ b/week-five/hipster-portfolio/public/styles.css
@@ -8,16 +8,26 @@ body {
     height: 100vh;
 }
 
-h1 {
-    margin: 3% 5% 0 5%;
+#header {
+    position: fixed;
+    width: 90.6%;
+    left: 63px;
+    /* margin: 3% 5% 0 5%; */
+    height: 10%;
+    top: 0;
+    margin: 0%;
     border-bottom: 1px #383838 solid;
+    /* box-shadow: 6px 6px 5px 1px rgba(158, 158, 162, 0.5); */
+    padding-top: 2%;
     text-align: right;
+    background-color: #f6f6f6;
+    z-index: 2;
     color: #383838;
     font-family: "roboto", sans-serif;
 }
 
 .projects {
-    margin-top: 4%;
+    margin-top: 9%;
     margin-left: 1%;
     display: flex;
     flex-direction: row;
@@ -76,12 +86,11 @@ footer {
 /* /////////////////////Description Page Styling///////////////////// */
 
 #desc-header {
-    margin: 1% 5% 0 5%;
+    margin: 2% 5% 0 5%;
+    text-align: right;
     border-bottom: 1px #383838 solid;
     color: #383838;
     font-family: "roboto", sans-serif;
-    padding-bottom: -1px;
-    margin: 3% 5% 0% 5%;
 }
 
 .desc-container {
@@ -108,12 +117,12 @@ footer {
 #desc-nav {
     margin-right: 2%;
     margin-bottom: 10%;
-    color: darkseagreen;
+    color: rgba(0, 128, 0, 0.862);
     font-size: larger;
 }
 
 .nav-projects {
-    border-right: 1px solid darkslategray;
+    border-right: 1px solid #383838;
     text-decoration: none;
     margin-right: 8%;
     width: 100%;
