--- a/week-six/twitter/twitter-part2/ticker/ticker-refactored.css
+++ b/week-six/twitter/twitter-part2/ticker/ticker-refactored.css
@@ -4,7 +4,7 @@ body {
 }
 
 .headlines {
-    margin-top: 6px;
+    margin-top: 12px;
     position: absolute;
     left: 100%;
     white-space: nowrap;
@@ -15,7 +15,7 @@ body {
     text-decoration: none;
     color: darkblue;
     font-family: "roboto", sans-serif;
-    font-size: large;
+    font-size: medium;
 }
 
 #ticker {
